<?xml version="1.0" encoding="utf-8"?>
<resources>
   <!--  登录界面 -->
    <string name="app_name">错题本</string>
    <string name="action_settings">Settings</string>
    <string name="button_enroll">注册</string>
    <string name="button_login">登录</string>
    <string name="username">用户名</string>
    <string name="pwd">密码</string>
    <string name="teacher">老师</string>
    <string name="student">学生</string>  
    <!--注册  -->
    <string name="en_usernametext">用户名</string>
    <string name="en_pwd">密码</string>
     <string name="en_repwd">重复密码</string>
    <string name="en_phone">电话</string>
    <string name="en_teacher">老师</string>
    <string name="en_student">学生</string> 
      <string name="btn_en">注册</string>
    <string name="btn_cancle">取消</string>
    <!-- 选科界面 -->
    <string name="subject">科目</string>
    <string name="button_Chinese">语文</string>
    <string name="button_math">数学</string>
    <string name="button_english">英语</string>
    <string name="button_physics">物理</string>
    <string name="button_chemistry">化学</string>
    <string name="button_biology">生物</string>
    <!--主界面  -->
     <string name="Text_classify">分类整理</string>
     <string name="btn_order">章节</string>
     <string name="btn_spot">知识点</string>
     <string name="btn_wrong">错题类型</string>
     <string name="btn_hard">错题难度</string>
     
      <string name="Text_write">错题录入</string>
      <string name="btn_one">单题录入</string>
      <string name="btn_more">批量录入</string>
      
      <string name="Text_review">复习评测</string>
      <string name="btn_content">复习内容</string>
      <string name="btn_set">复习设置</string>
      
      <string name="Text_add">必要补充</string>
      <string name="btn_plan">学习计划</string>
      <string name="btn_back">意见反馈</string>
      <!-- class_order -->
      
      <string name="Text_ordername">章节名称是</string>
     <string-array name="SpinnerOne">  
       <item>第一章 函数与极限</item>  
       <item>第二章 导数与微分</item>  
       <item>第三章 微分中值定理</item>  
       <item>第四章  不定积分</item> 
       <item>第五章 定积分</item> 
       <item>第六章 定积分的应用</item> 
       <item>第七章 微分方程</item> 
    </string-array> 
       <string name="btn_ok">返回</string>
       <string name="Text_master">掌握程度分析</string>
       <string name="text_select">查询</string>
     <string-array name="SpinnerTwo">  
       <item>完全不会</item>  
       <item>掌握较差</item>  
       <item>基本掌握</item>  
       <item>掌握较好</item> 
       <item>完全掌握</item> 
    </string-array> 
       <string name="select">查询</string>
      <!-- class_spot -->
       <string name="Text_knowledge">知识点</string>
     <string-array name="SpinnerThree">  
       <item>函数求极限</item>  
       <item>函数求导</item>  
       <item>函数的极值</item>  
       <item>分部求积分法</item> 
       <item>求定积分</item> 
       <item>齐次方程的求解</item> 
    </string-array> 
       <string name="bt_ok">查询</string>
        <string name="btreturn1">返回</string>   
       <string name="master">掌握程度分析</string>
     <string-array name="Spinnerfour">  
       <item>完全不会</item>  
       <item>掌握较差</item>  
       <item>基本掌握</item>  
       <item>掌握较好</item> 
       <item>完全掌握</item> 
    </string-array> 
      <!-- class_wrong -->
         <string name="Text_type">错题类型</string>
     <string-array name="Spinnerfive">  
       <item>选择题</item>  
       <item>填空题</item>  
       <item>应用题</item>  
       <item>问答题</item> 
       <item>综合题</item>
    </string-array> 
       <string name="ture_ok">返回</string>
       <string name="Text_analytic">掌握程度分析</string>
     <string-array name="Spinnersix">  
       <item>完全不会</item>  
       <item>掌握较差</item>  
       <item>基本掌握</item>  
       <item>掌握较好</item> 
       <item>完全掌握</item> 
    </string-array> 
       <string name="tu_ok">查询</string>
      <!-- class_hard -->
        <string name="Text_hard">错题难度</string>
     <string-array name="Spinnerseven">  
       <item>基础题</item>  
       <item>典型题</item>  
       <item>难点题</item>  
       <item>综合题</item> 
    </string-array> 
       <string name="right_ok">返回</string>
       <string name="analytic">掌握程度分析</string>
     <string-array name="Spinnereight">  
       <item>完全不会</item>  
       <item>掌握较差</item>  
       <item>基本掌握</item>  
       <item>掌握较好</item> 
       <item>完全掌握</item> 
    </string-array> 
       <string name="rig_ok">查询</string>
      <!-- write_one -->
        <string name="Text_Date">录入日期</string>
        <string name="Text_Time">录入时间</string>
        <string name="Txt_type">题目类型</string>
        <string name="txt_content">错题正文</string>
       <string-array name="SpinnerNine">  
       <item>填空题</item>  
       <item>选择题</item>  
       <item>应用题</item>  
       <item>问答题</item> 
       <item>综合题</item> 
        </string-array> 
    <string name="Text_Section">对应章节</string>
      <string-array name="SpinnerTen">  
       <item>第一章</item>  
       <item>第二章</item>  
       <item>第三章</item>  
       <item>第四章</item> 
       <item>第五章</item> 
       <item>第六章</item> 
       <item>第七章</item> 
    </string-array>  
    <string name="Text_Reason">错误原因</string>
      <string-array name="SpinnerEleven">  
       <item>看错了</item>  
       <item>写错了</item>  
       <item>已学知识的遗忘</item>  
       <item>未掌握典型思路</item> 
       <item>缺乏课后巩固练习</item> 
       <item>理解能力不够</item> 
       <item>解题思路狭隘</item> 
    </string-array> 
      <string name="Text_Knowledge">知识点</string>
      <string-array name="SpinnerTwelve">  
       <item>函数求极限</item>  
       <item>函数求导</item>  
       <item>函数的极值</item>  
       <item>分部求积分法</item> 
       <item>求定积分</item> 
       <item>齐次方程的求解</item> 
    </string-array> 
     <string name="Text_True">下一步</string>
      <!-- write_one1 -->
        <string name="Error_Text">错题正文</string>
        <string name="Text_Error">错题正文</string>
        <string name="Analysis_Answer">答案与分析</string>
        <string name="Answer_Analysis">答案与分析</string>
        <string name="Txt_Experience">心得体会</string>
        <string name="Text_Experience">心得体会</string>
      <string name="level">掌握程度</string>
      <string-array name="SpinnerThirteen">  
       <item>完全不会</item>  
       <item>掌握较差</item>  
       <item>基本掌握</item>  
       <item>掌握较好</item> 
       <item>完全掌握</item> 
    </string-array>
        <string name="Text_Keep">保存</string>
      <!-- review_content -->
      <string name="Text_content">复习内容</string>

           <string name="text_btn2">返回</string> 
           <string name="rigs_start">开始复习</string>     
           <string name="Text_number">复习记录条数</string>
           <string name="radio_number">条数</string> 
            <string name="radio_year">年份</string> 
              <string name="radio_date">日期</string>
                <string name="title_start">题目</string>
           <string name="Text_collate">复习排序</string>  
           <string name="collate_way">排序方式</string> 
           
           <string name="login_way">题目录入顺序</string> 
           <string name="collate_direction">排序方向</string>
           <string name="order_rise">升序</string>
           <string name="order_down">降序</string>   
           <string name="login_date">按录入日期</string> 
           <string name="login_time">按录入时间</string> 
           <string name="title_type">按题目类型</string> 
           <string-array name="Spinnerthirty">  
            <item>选择题</item>  
            <item>填空题</item>  
            <item>应用题</item>  
            <item>问答题</item> 
            <item>综合题</item>
            </string-array>
          <string name="title_chapter">按对应章节</string>
          <string-array name="Spinnerfourteen">  
          <item>第一章</item>  
          <item>第二章</item>  
          <item>第三章</item>  
          <item>第四章</item> 
          <item>第五章</item> 
          <item>第六章</item> 
          <item>第七章</item> 
          </string-array>  
           <string name="error_Reason">按错误原因</string>
              <string-array name="Spinnerfifteen">  
              <item>看错了</item>  
              <item>写错了</item>  
              <item>已学知识的遗忘</item>  
              <item>未掌握典型思路</item> 
              <item>缺乏课后巩固练习</item> 
              <item>理解能力不够</item> 
              <item>解题思路狭隘</item> 
              </string-array> 
           <string name="title_Knowledge">按知识点</string>
              <string-array name="Spinnersixteen">  
              <item>函数求极限</item>  
              <item>函数求导</item>  
              <item>函数的极值</item>  
              <item>分部求积分法</item> 
              <item>求定积分</item> 
              <item>齐次方程的求解</item> 
            </string-array> 
      <!-- review_set -->
      
      <!-- add_plan -->
      
      <!-- add_back -->
      <string name="back_view">请填写您的意见，我们将尽快改进！</string>
         <string name="back_ok">确定</string>       
</resources>
