<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
 
 <TextView
     android:id="@+id/Text_classify"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/Text_classify"
     android:textSize="20sp" />

 <Button
     android:id="@+id/btn_order"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/Text_classify"
     android:layout_below="@+id/Text_classify"
     android:text="@string/btn_order"
     android:textSize="12sp" />

 <Button
     android:id="@+id/btn_hard"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignTop="@+id/btn_wrong"
     android:layout_toRightOf="@+id/btn_wrong"
     android:text="@string/btn_hard"
     android:textSize="12sp" />

 <Button
     android:id="@+id/btn_spot"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/Text_classify"
     android:layout_toRightOf="@+id/btn_order"
     android:text="@string/btn_spot"
     android:textSize="12sp" />

 <Button
     android:id="@+id/btn_wrong"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignBaseline="@+id/btn_spot"
     android:layout_alignBottom="@+id/btn_spot"
     android:layout_toRightOf="@+id/btn_spot"
     android:text="@string/btn_wrong"
     android:textSize="12sp" />

   <TextView
       android:id="@+id/Text_write"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/btn_order"
       android:layout_below="@+id/btn_order"
       android:text="@string/Text_write"
       android:textSize="20sp" />

 <Button
     android:id="@+id/btn_more"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/btn_wrong"
     android:layout_below="@+id/Text_write"
     android:layout_marginLeft="28dp"
     android:text="@string/btn_more"
     android:textSize="12sp" />

 <Button
     android:id="@+id/btn_one"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/Text_write"
     android:layout_below="@+id/Text_write"
     android:layout_marginLeft="26dp"
     android:text="@string/btn_one"
     android:textSize="12sp" />

  <TextView
      android:id="@+id/Text_review"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/Text_write"
      android:layout_below="@+id/btn_one"
      android:layout_marginTop="18dp"
      android:text="@string/Text_review"
      android:textSize="20sp" />

  <Button
      android:id="@+id/btn_set"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/btn_more"
      android:layout_below="@+id/Text_review"
      android:text="@string/btn_set"
      android:textSize="12sp" />

  <Button
      android:id="@+id/btn_content"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBaseline="@+id/btn_set"
      android:layout_alignBottom="@+id/btn_set"
      android:layout_alignLeft="@+id/btn_one"
      android:text="@string/btn_content"
      android:textSize="12sp" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_set"
        android:layout_below="@+id/btn_set"
        android:layout_marginTop="52dp"
        android:text="@string/btn_back"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_back"
        android:layout_alignBottom="@+id/btn_back"
        android:layout_alignLeft="@+id/btn_content"
        android:text="@string/btn_plan"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/Text_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Text_review"
        android:layout_below="@+id/btn_content"
        android:layout_marginTop="14dp"
        android:text="@string/Text_add"
        android:textSize="20sp" />

    </RelativeLayout>