<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/Error_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:text="@string/Error_Text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Text_Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Error_Text"
        android:layout_below="@+id/Error_Text"
        android:background="@android:drawable/edit_text"
        android:ems="50"
        android:enabled="true"
        android:gravity="top"
        android:hint="@string/Text_Error"
        android:inputType="textMultiLine"
        android:maxLines="8"
        android:minLines="6"
        android:scrollbars="vertical"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/Analysis_Answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/Analysis_Answer"
        android:textSize="20sp" />

   <TextView
       android:id="@+id/Text_Experience"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/Answer_Analysis"
       android:layout_below="@+id/Answer_Analysis"
       android:text="@string/Text_Experience"
       android:textSize="20sp" />

     <EditText
         android:id="@+id/Txt_Experience"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/Text_Experience"
         android:ems="50"
         android:hint="@string/Txt_Experience"
         android:textSize="17sp" />

    <Button
        android:id="@+id/Text_Keep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/Text_Error"
        android:text="@string/Text_Keep"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Answer_Analysis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Txt_Experience"
        android:layout_below="@+id/Analysis_Answer"
        android:background="@android:drawable/edit_text"
        android:ems="50"
        android:enabled="true"
        android:gravity="top"
        android:hint="@string/Answer_Analysis"
        android:inputType="textMultiLine"
        android:maxLines="8"
        android:minLines="6"
        android:scrollbars="vertical"
        android:textSize="17sp" >

        <requestFocus />
    </EditText>

</RelativeLayout>