<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >
    <TextView
          android:id="@+id/Text_Date"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:layout_marginLeft="50dp"
          android:text="@string/Text_Date"
          android:textSize="20sp" />
    <TextView
        android:id="@+id/Text_Time"
        android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:layout_marginLeft="50dp"
          android:text="@string/Text_Time"
          android:textSize="20sp" />
  </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

      <TextView
          android:id="@+id/Txt_type"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:text="@string/Txt_type"
          android:textSize="20sp" />
       <Spinner
         android:id="@+id/SpinnerNine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
       </LinearLayout>
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

       <TextView
           android:id="@+id/Text_Section"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
           android:text="@string/Text_Section"
           android:textSize="20sp" />

     <Spinner
         android:id="@+id/SpinnerTen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
  </LinearLayout>
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
     <TextView
         android:id="@+id/Text_Reason"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/Text_Reason"
         android:textSize="20sp" />

      <Spinner
          android:id="@+id/SpinnerEleven"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
   </LinearLayout>
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
      <TextView
          android:id="@+id/Text_Knowledge"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:text="@string/Text_Knowledge"
          android:textSize="20sp" />

      <Spinner
          android:id="@+id/SpinnerTwelve"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
  </LinearLayout>

   <Button
       android:id="@+id/Text_True"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="100dp"
       android:text="@string/Text_True"
       android:textSize="20sp" />

   <DatePicker
       android:id="@+id/datePicker1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />

</LinearLayout>
