<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

      <TextView
          android:id="@+id/en_usernametext"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
          android:layout_marginLeft="20dp"
          android:layout_marginTop="20dp"
          android:text="@string/en_usernametext"
          android:textSize="17sp" />

      <EditText
          android:id="@+id/en_usernameeedit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBaseline="@+id/en_usernametext"
          android:layout_alignBottom="@+id/en_usernametext"
          android:layout_alignParentRight="true"
          android:layout_marginRight="16dp"
          android:hint="@string/en_usernametext"
          android:ems="10"
          android:textSize="17sp" />

      <TextView
          android:id="@+id/en_pwd"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/en_usernametext"
          android:layout_below="@+id/en_usernameeedit"
          android:layout_marginTop="31dp"
          android:text="@string/en_pwd"
          android:textSize="17sp" />

      <EditText
          android:id="@+id/en_pwdtext"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBottom="@+id/en_pwd"
          android:layout_alignLeft="@+id/en_usernameeedit"
          android:ems="10"
          android:hint="@string/en_pwd"
          android:textSize="17sp" />

       <TextView
           android:id="@+id/en_phone"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/en_pwd"
           android:layout_below="@+id/en_pwd"
           android:layout_marginTop="31dp"
           android:text="@string/en_phone"
           android:textSize="17sp" />

       <EditText
           android:id="@+id/en_phonetext"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBottom="@+id/en_phone"
           android:layout_alignLeft="@+id/en_pwdtext"
           android:ems="10"
           android:hint="@string/en_phone"
           android:textSize="17sp" >

           <requestFocus />
       </EditText>
       
  <RadioGroup
      android:id="@+id/radGroupclass"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:orientation="horizontal" >
  </RadioGroup>

  <RadioButton
      android:id="@+id/en_student"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/radGroupclass"
      android:layout_alignRight="@+id/en_phonetext"
      android:layout_marginLeft="20dp"
      android:text="@string/en_student" />

  <RadioButton
      android:id="@+id/en_teacher"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/radGroupclass"
      android:layout_alignParentLeft="true"
      android:layout_marginRight="20dp"
      android:text="@string/en_teacher" />

 <Button
     android:id="@+id/btn_cancle"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/en_teacher"
     android:layout_toRightOf="@+id/en_phone"
     android:text="@string/btn_cancle" />

 <Button
     android:id="@+id/btn_en"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignBaseline="@+id/btn_cancle"
     android:layout_alignBottom="@+id/btn_cancle"
     android:layout_alignRight="@+id/en_student"
     android:layout_marginRight="47dp"
     android:text="@string/btn_en" />

  </RelativeLayout>